[project]
name = "electromart"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "Flask==3.1.2",
    "Flask-Mail==0.10.0",
    "Flask-MySQLdb==2.0.0",
    "fonttools==4.59.1",
    "idna==3.10",
    "importlib_metadata==8.7.0",
    "importlib_resources==6.5.2",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.7",
    "MarkupSafe==3.0.2",
    "mysql-connector-python==9.4.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "six==1.17.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3",
    "zipp==3.23.0",
]

[tool.vercel]
entrypoint = "run:app"
